-- Catalogos

CREATE TABLE tipo_orden (
    id     NUMBER GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR2(20 CHAR)  NOT NULL,
    nombre VARCHAR2(100 CHAR) NOT NULL,
    CONSTRAINT pk_tipo_orden PRIMARY KEY (id),
    CONSTRAINT uk_tipo_orden_codigo UNIQUE (codigo)
);

CREATE TABLE estado_orden (
    id     NUMBER GENERATED BY DEFAULT AS IDENTITY,
    codigo VARCHAR2(20 CHAR)  NOT NULL,
    nombre VARCHAR2(100 CHAR) NOT NULL,
    CONSTRAINT pk_estado_orden PRIMARY KEY (id),
    CONSTRAINT uk_estado_orden_codigo UNIQUE (codigo)
);

-- Maquina de estados: una fila por cada transicion permitida
CREATE TABLE transicion_estado (
    id_estado_origen  NUMBER NOT NULL,
    id_estado_destino NUMBER NOT NULL,
    CONSTRAINT pk_transicion_estado PRIMARY KEY (id_estado_origen, id_estado_destino),
    CONSTRAINT fk_transicion_origen  FOREIGN KEY (id_estado_origen)  REFERENCES estado_orden (id),
    CONSTRAINT fk_transicion_destino FOREIGN KEY (id_estado_destino) REFERENCES estado_orden (id)
);

-- Clientes

CREATE TABLE cliente (
    id                    NUMBER GENERATED BY DEFAULT AS IDENTITY,
    tipo_identificacion   VARCHAR2(5 CHAR)   NOT NULL,
    numero_identificacion VARCHAR2(20 CHAR)  NOT NULL,
    nombre                VARCHAR2(100 CHAR),
    apellido              VARCHAR2(100 CHAR),
    razon_social          VARCHAR2(200 CHAR),
    usuario_creacion      VARCHAR2(100 CHAR) NOT NULL,
    fecha_creacion        TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    usuario_modificacion  VARCHAR2(100 CHAR),
    fecha_modificacion    TIMESTAMP,
    CONSTRAINT pk_cliente PRIMARY KEY (id),
    CONSTRAINT uk_cliente_identificacion UNIQUE (tipo_identificacion, numero_identificacion),
    CONSTRAINT ck_cliente_tipo_identificacion CHECK (tipo_identificacion IN ('CC', 'CE', 'NIT', 'PAS')),
    CONSTRAINT ck_cliente_nombre CHECK (
        (nombre IS NOT NULL AND apellido IS NOT NULL) OR razon_social IS NOT NULL
    )
);

-- Ordenes: particion mensual automatica por fecha de creacion.
-- La PK y la UNIQUE no incluyen la columna de particion, por eso Oracle
-- las crea como indices globales.

CREATE TABLE orden (
    id                   NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_cliente           NUMBER             NOT NULL,
    id_tipo              NUMBER             NOT NULL,
    id_estado            NUMBER             NOT NULL,
    canal                VARCHAR2(30 CHAR)  NOT NULL,
    llave_idempotencia   VARCHAR2(100 CHAR) NOT NULL,
    usuario_creacion     VARCHAR2(100 CHAR) NOT NULL,
    fecha_creacion       TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    usuario_modificacion VARCHAR2(100 CHAR),
    fecha_modificacion   TIMESTAMP,
    CONSTRAINT pk_orden PRIMARY KEY (id),
    CONSTRAINT uk_orden_llave_idempotencia UNIQUE (llave_idempotencia),
    CONSTRAINT fk_orden_cliente FOREIGN KEY (id_cliente) REFERENCES cliente (id),
    CONSTRAINT fk_orden_tipo    FOREIGN KEY (id_tipo)    REFERENCES tipo_orden (id),
    CONSTRAINT fk_orden_estado  FOREIGN KEY (id_estado)  REFERENCES estado_orden (id)
)
PARTITION BY RANGE (fecha_creacion) INTERVAL (NUMTOYMINTERVAL(1, 'MONTH'))
(PARTITION p_inicial VALUES LESS THAN (TIMESTAMP '2026-01-01 00:00:00'));

CREATE INDEX idx_orden_estado_fecha ON orden (id_estado, fecha_creacion) LOCAL;
CREATE INDEX idx_orden_cliente      ON orden (id_cliente) LOCAL;
CREATE INDEX idx_orden_fecha        ON orden (fecha_creacion) LOCAL;

-- Historico: solo insercion, particion mensual por fecha del cambio

CREATE TABLE orden_historico (
    id                 NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_orden           NUMBER             NOT NULL,
    id_estado_anterior NUMBER,
    id_estado_nuevo    NUMBER             NOT NULL,
    fecha              TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    usuario            VARCHAR2(100 CHAR) NOT NULL,
    observacion        VARCHAR2(500 CHAR),
    id_peticion        VARCHAR2(100 CHAR),
    CONSTRAINT pk_orden_historico PRIMARY KEY (id),
    CONSTRAINT fk_hist_orden           FOREIGN KEY (id_orden)           REFERENCES orden (id),
    CONSTRAINT fk_hist_estado_anterior FOREIGN KEY (id_estado_anterior) REFERENCES estado_orden (id),
    CONSTRAINT fk_hist_estado_nuevo    FOREIGN KEY (id_estado_nuevo)    REFERENCES estado_orden (id)
)
PARTITION BY RANGE (fecha) INTERVAL (NUMTOYMINTERVAL(1, 'MONTH'))
(PARTITION p_inicial VALUES LESS THAN (TIMESTAMP '2026-01-01 00:00:00'));

CREATE INDEX idx_hist_orden_fecha ON orden_historico (id_orden, fecha) LOCAL;
